fix: index, transactions, b50 canvas
